--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, inital-scale=1, shrink-to-fit=no" />
         <title>Simple React To Do List</title>
     </head>
-    <body style="background-color:cyan">
+    <body>
         <div id="root"></div>
         <noscript>
             Please enable JavaScript to view this site.
